--- a/Related to Sensing data with both gyro and accelo/Webpage/LiveGyro.html
+++ b/Related to Sensing data with both gyro and accelo/Webpage/LiveGyro.html
@@ -4,9 +4,17 @@
       <title>Real Time Gyro Values</title>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.2/mqttws31.min.js" type="text/javascript">
 	 </script>
-	 <script type = "text/javascript" language = "javascript">
-		var mqtt;
-		var reconnectTimeout = 2000;
+   <script type = "text/javascript" language = "javascript">
+
+   //var thresholdLimit = parseFloat(prompt('Enter a threshold value : '));
+
+   //var threshoLimit = prompt('Enter a threshold value : ');
+   var thresholdLimit = 0.5;
+   //document.querySelector('#tLimitID').textContent = thresholdLimit;
+   //console.log(typeof(threshoLimit));
+
+    var mqtt;
+		//var reconnectTimeout = 100;
     var host="iot.eclipse.org";
     var port=1883;
 
@@ -14,58 +22,78 @@
     var prevY = 0;
     var prevZ = 0;
 
-    var aprevX = 0;
-    var aprevY = 0;
-    var aprevZ = 0;
+
+    var initialListX = [];
+    var initialListY = [];
+    var initialListZ = [];
+    var initialCounter = 0;
+
+    var offX = 0;
+    var offY = 0;
+    var offZ = 0;
 
     var InitialStatus = false;
+    var calStatus = false;
     //OR ......
 		//var host="broker.hivemq.com";
 		//var port=8000;
-
-
 
 	 	function onConnect() {
 	  // Once a connection has been made, make a subscription and send a message.
 
 		console.log("Connected ");
-		mqtt.subscribe("outsinhala123");
+		mqtt.subscribe("outsinhala12345");
 
       mqtt.onMessageArrived = function (message) {
       console.log("Live Feed: " + message.payloadString);
+
+      //console.log("tdata is : "+document.getElementById("tData").value);
+
+      thresholdLimit = document.getElementById("tData").value;
       var tempData=message.payloadString.split(',');
       var xGyro=parseFloat(tempData[0].split(':')[1]);
       var yGyro=parseFloat(tempData[1].split(':')[1]);
       var zGyro=parseFloat(tempData[2].split(':')[1]);
+      document.querySelector('#xID').textContent = xGyro - offX;
+      document.querySelector('#yID').textContent = yGyro - offY;
+      document.querySelector('#zID').textContent = zGyro - offZ;
+
+      //accelo part
+      var xAccel=parseFloat(tempData[3].split(':')[1]);
+      var yAccel=parseFloat(tempData[4].split(':')[1]);
+      var zAccel=parseFloat(tempData[5].split(':')[1]);
+      document.querySelector('#axID').textContent = xAccel;
+      document.querySelector('#ayID').textContent = yAccel;
+      document.querySelector('#azID').textContent = zAccel;
 
 
-      var axGyro=parseFloat(tempData[3].split(':')[1]);
-      var ayGyro=parseFloat(tempData[4].split(':')[1]);
-      var azGyro=parseFloat(tempData[5].split(':')[1]);
 
+      document.querySelector('#tLimitID').textContent = thresholdLimit+" units";
 
-      document.querySelector('#xID').textContent = xGyro;
-      document.querySelector('#yID').textContent = yGyro;
-      document.querySelector('#zID').textContent = zGyro;
+      initialCounter++;
+      if(initialCounter<=100){
+        initialListX.push(xGyro);
+        initialListY.push(yGyro);
+        initialListZ.push(zGyro);
+        //console.log(initialListX);
 
-      document.querySelector('#axID').textContent = axGyro;
-      document.querySelector('#ayID').textContent = ayGyro;
-      document.querySelector('#azID').textContent = azGyro;
-
-      if(InitialStatus==false){
+      }
+      else if(InitialStatus==false){
+        calStatus = true;
         InitialStatus = true;
         prevX = xGyro;
         prevY = yGyro;
         prevZ = zGyro;
+        //offX=sum(initialListX)/100;
+        //offY=sum(initialListY)/100;
+        //offZ=sum(initialListZ)/100;
 
-        aprevX=axGyro;
-        aprevY=ayGyro;
-        aprevZ=azGyro;
+        offX = initialListX.reduce((a, b) => a + b, 0)/100;
+        offY = initialListY.reduce((a, b) => a + b, 0)/100;
+        offZ = initialListZ.reduce((a, b) => a + b, 0)/100;
       }
       else{
-        if(Math.abs(prevX-xGyro)>=0.5||Math.abs(prevY-yGyro)>=0.5||Math.abs(prevZ-zGyro)>=0.5||
-        Math.abs(aprevX-axGyro)>=0.5||Math.abs(aprevY-ayGyro)>=0.5||Math.abs(aprevZ-azGyro)>=0.5){
-
+        if(Math.abs(prevX-xGyro)>=thresholdLimit||Math.abs(prevY-yGyro)>=thresholdLimit||Math.abs(prevZ-zGyro)>=thresholdLimit){
           document.querySelector('#vibID').textContent = "Activity Started !!!";
         }
         else{
@@ -74,10 +102,13 @@
         prevX = xGyro;
         prevY = yGyro;
         prevZ = zGyro;
+      }
 
-        aprevX=axGyro;
-        aprevY=ayGyro;
-        aprevZ=azGyro;
+      if(calStatus === true){
+        document.querySelector('#oLimitID').textContent = "Callibrated !!!";
+      }
+      else{
+        document.querySelector('#oLimitID').textContent = (100-initialCounter) + " records !!!!";
       }
       /*console.log("Topic:     " + message.destinationName);
       //console.log("QoS:       " + message.qos);
@@ -104,7 +135,8 @@
 		}
 
 	  </script>
-   </head>
+     </head>
+
      <body>
 
 
@@ -112,54 +144,56 @@
        <div class="title">Real Time Gyro Values
         </div>
          <div class="xGyro-panel">
-             <div class="initial-data" id="name-1">X-Value</div>
-                <div class="initial-data-value" id="xID">Initialising ...
+             <div class="initial-data" id="name-1">Yaw</div>
+                <div class="initial-data-value" id="xID">Initialising..
                 </div>
           </div>
 
           <div class="yGyro-panel">
-              <div class="initial-data" id="name-1">Y-Value
+              <div class="initial-data" id="name-1">Pitch
               </div>
-                 <div class="initial-data-value" id="yID">Initialising ...
+                 <div class="initial-data-value" id="yID">Initialising..
                  </div>
            </div>
 
            <div class="zGyro-panel">
-               <div class="initial-data" id="name-1">Z-Value
+               <div class="initial-data" id="name-1">Roll
                </div>
-                  <div class="initial-data-value" id="zID">Initialising ...
+                  <div class="initial-data-value" id="zID">Initialising..
                   </div>
             </div>
+
             <!--
                   Acellometer Values
             -->
             <div class="xAccel-panel">
-                <div class="initial-data" id="name-1">Z-Value
+                <div class="initial-data" id="name-1">AccX
                 </div>
-                   <div class="initial-data-value" id="axID">Initialising ...
+                   <div class="initial-data-value" id="axID">Initialising..
                    </div>
             </div>
 
              <div class="yAccel-panel">
-                 <div class="initial-data" id="name-1">Z-Value
+                 <div class="initial-data" id="name-1">AccY
                  </div>
-                    <div class="initial-data-value" id="ayID">Initialising ...
+                    <div class="initial-data-value" id="ayID">Initialising..
                     </div>
             </div>
 
             <div class="zAccel-panel">
-                <div class="initial-data" id="name-1">Z-Value
+                <div class="initial-data" id="name-1">AccZ
                 </div>
-                   <div class="initial-data-value" id="azID">Initialising ...
+                   <div class="initial-data-value" id="azID">Initialising..
                    </div>
             </div>
+
     </div>
 
   <div class="wrapper2 clearfix">
   <div class="vib-box">Vibration Status
   <div class="vibStat" id="vibID">Initialising ...</div>
-  </div>
-  </div>
+</div>
+</div>
 
 <div class="wrapper3 clearfix">
 
@@ -168,14 +202,43 @@
 </div>
 
 </div>
+<!-- graph2 fail
+<div class="wrapper7 clearfix">
 
+<div id="chartContainer2" >
+
+</div>
+
+</div>
+-->
+  <div class="wrapper4 clearfix">
+      <div class="threshold-limit-main">Threshold Limit
+      <div class="threshold-limit" id="tLimitID">Initialising ...</div>
+  </div>
+  </div>
+
+  <div class="wrapper5 clearfix">
+      <div class="offset-limit-main">Offset Callibration Status
+      <div class="offset-limit" id="oLimitID">Initialising ...</div>
+  </div>
+  </div>
+
+  <div class="wrapper6 clearfix">
+
+    Set Threshold Limit :
+    <input type="text" id="tData" name="LastName" value="0.5"><br>
+    <input type="submit" value="Submit">
+
+    <p>Click the "Submit" button and the form-data will be sent to a page on the server called.</p>
+
+  </div>
 
 
  	<script>
 	MQTTconnect();
 	</script>
 
-  <script src="final.js"></script>
+  <script src="finalGyro.js"></script>
   <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
    </body>
 </html>
