--- a/Related to Sensing data with both gyro and accelo/Webpage/ LiveGyro2.html
+++ b/Related to Sensing data with both gyro and accelo/Webpage/ LiveGyro2.html
@@ -2,10 +2,19 @@
    <head>
      <link type="text/css" rel="stylesheet" href="design.css">
       <title>Real Time Gyro Values</title>
-	  <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.2/mqttws31.min.js" type="text/javascript">
+  	  <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.2/mqttws31.min.js" type="text/javascript">
 	 </script>
-	 <script type = "text/javascript" language = "javascript">
-		var mqtt;
+   <script type = "text/javascript" language = "javascript">
+
+   //var thresholdLimit = parseFloat(prompt('Enter a threshold value : '));
+
+   //var threshoLimit = prompt('Enter a threshold value : ');
+   var thresholdLimit = 0.5;
+   //document.querySelector('#tLimitID').textContent = thresholdLimit;
+   //console.log(typeof(threshoLimit));
+
+    var mqtt;
+    var connected_flag=0;
 		var reconnectTimeout = 2000;
     var host="iot.eclipse.org";
     var port=1883;
@@ -14,16 +23,21 @@
     var prevY = 0;
     var prevZ = 0;
 
-    var aprevX = 0;
-    var aprevY = 0;
-    var aprevZ = 0;
+
+    var initialListX = [];
+    var initialListY = [];
+    var initialListZ = [];
+    var initialCounter = 0;
+
+    var offX = 0;
+    var offY = 0;
+    var offZ = 0;
 
     var InitialStatus = false;
+    var calStatus = false;
     //OR ......
 		//var host="broker.hivemq.com";
 		//var port=8000;
-
-
 
 	 	function onConnect() {
 	  // Once a connection has been made, make a subscription and send a message.
@@ -32,79 +46,144 @@
 		mqtt.subscribe("outsinhala12345");
 
       mqtt.onMessageArrived = function (message) {
-      console.log("Live Feed: " + message.payloadString);
-      var tempData=message.payloadString.split(',');
-      var xGyro=parseFloat(tempData[0].split(':')[1]);
-      var yGyro=parseFloat(tempData[1].split(':')[1]);
-      var zGyro=parseFloat(tempData[2].split(':')[1]);
+      var msg=message.payloadString
+      console.log("Live Feed: " + msg);
 
+      //console.log("tdata is : "+document.getElementById("tData").value);
 
-      var axGyro=parseFloat(tempData[3].split(':')[1]);
-      var ayGyro=parseFloat(tempData[4].split(':')[1]);
-      var azGyro=parseFloat(tempData[5].split(':')[1]);
-
-
-      document.querySelector('#xID').textContent = xGyro;
-      document.querySelector('#yID').textContent = yGyro;
-      document.querySelector('#zID').textContent = zGyro;
-
-      document.querySelector('#axID').textContent = axGyro;
-      document.querySelector('#ayID').textContent = ayGyro;
-      document.querySelector('#azID').textContent = azGyro;
-
-      if(InitialStatus==false){
-        InitialStatus = true;
-        prevX = xGyro;
-        prevY = yGyro;
-        prevZ = zGyro;
-
-        aprevX=axGyro;
-        aprevY=ayGyro;
-        aprevZ=azGyro;
+      if(msg=="hello from ESP8266"){
+        //continue; do nothing
       }
       else{
-        if(Math.abs(prevX-xGyro)>=0.5||Math.abs(prevY-yGyro)>=0.5||Math.abs(prevZ-zGyro)>=0.5||
-        Math.abs(aprevX-axGyro)>=0.5||Math.abs(aprevY-ayGyro)>=0.5||Math.abs(aprevZ-azGyro)>=0.5){
+              thresholdLimit = document.getElementById("tData").value;
+              var tempData=message.payloadString.split(',');
+              var xGyro=parseFloat(tempData[0].split(':')[1]);
+              var yGyro=parseFloat(tempData[1].split(':')[1]);
+              var zGyro=parseFloat(tempData[2].split(':')[1]);
+              document.querySelector('#xID').textContent = xGyro - offX;
+              document.querySelector('#yID').textContent = yGyro - offY;
+              document.querySelector('#zID').textContent = zGyro - offZ;
 
-          document.querySelector('#vibID').textContent = "Activity Started !!!";
-        }
-        else{
-          document.querySelector('#vibID').textContent = "Activity Stopped !!!";
-        }
-        prevX = xGyro;
-        prevY = yGyro;
-        prevZ = zGyro;
+              //accelo part
+              var xAccel=parseFloat(tempData[3].split(':')[1]);
+              var yAccel=parseFloat(tempData[4].split(':')[1]);
+              var zAccel=parseFloat(tempData[5].split(':')[1]);
+              document.querySelector('#axID').textContent = xAccel;
+              document.querySelector('#ayID').textContent = yAccel;
+              document.querySelector('#azID').textContent = zAccel;
 
-        aprevX=axGyro;
-        aprevY=ayGyro;
-        aprevZ=azGyro;
-      }
-      /*console.log("Topic:     " + message.destinationName);
-      //console.log("QoS:       " + message.qos);
-      //console.log("Retained:  " + message.retained);
-      // Read Only, set if message might be a duplicate sent from broker
-      //console.log("Duplicate: " + message.duplicate);
-      //console.log(message);*/
+
+
+              document.querySelector('#tLimitID').textContent = thresholdLimit+" units";
+
+              initialCounter++;
+              if(initialCounter<=100){
+                initialListX.push(xGyro);
+                initialListY.push(yGyro);
+                initialListZ.push(zGyro);
+                //console.log(initialListX);
+
+              }
+              else if(InitialStatus==false){
+                calStatus = true;
+                InitialStatus = true;
+                prevX = xGyro;
+                prevY = yGyro;
+                prevZ = zGyro;
+                //offX=sum(initialListX)/100;
+                //offY=sum(initialListY)/100;
+                //offZ=sum(initialListZ)/100;
+
+                offX = initialListX.reduce((a, b) => a + b, 0)/100;
+                offY = initialListY.reduce((a, b) => a + b, 0)/100;
+                offZ = initialListZ.reduce((a, b) => a + b, 0)/100;
+              }
+              else{
+                if(Math.abs(prevX-xGyro)>=thresholdLimit||Math.abs(prevY-yGyro)>=thresholdLimit||Math.abs(prevZ-zGyro)>=thresholdLimit){
+                  document.querySelector('#vibID').textContent = "Activity Started !!!";
+                }
+                else{
+                  document.querySelector('#vibID').textContent = "Activity Stopped !!!";
+                }
+                prevX = xGyro;
+                prevY = yGyro;
+                prevZ = zGyro;
+              }
+
+              if(calStatus === true){
+                document.querySelector('#oLimitID').textContent = "Callibrated !!!";
+              }
+              else{
+                document.querySelector('#oLimitID').textContent = (100-initialCounter) + " records !!!!";
+              }
+              /*console.log("Topic:     " + message.destinationName);
+              //console.log("QoS:       " + message.qos);
+              //console.log("Retained:  " + message.retained);
+              // Read Only, set if message might be a duplicate sent from broker
+              //console.log("Duplicate: " + message.duplicate);
+              //console.log(message);*/
+
+
+            }
       }
 
     //message = new Paho.MQTT.Message("Hello World");
 		//message.destinationName = "outsinhala123";
 		//mqtt.send(message);
-	  }
+  }
+
+
+  function onConnectionLost(){
+  console.log("connection lost");
+  //document.getElementById("status").innerHTML = "Connection Lost";
+  //document.getElementById("status_messages").innerHTML ="Connection Lost";
+  connected_flag=0;
+  }
+  function onFailure(message) {
+    console.log("Failed");
+    //document.getElementById("status_messages").innerHTML = "Connection Failed- Retrying";
+        setTimeout(MQTTconnect, reconnectTimeout);
+        }
+
+
+
+    function onConnected(recon,url){
+    console.log(" in onConnected " +reconn);
+    }
+
+
+    function disconnect()
+    {
+    if (connected_flag==1)
+      mqtt.disconnect();
+    }
+
+
 	  function MQTTconnect() {
 		console.log("connecting to "+ host +" "+ port);
-    mqtt = new Paho.MQTT.Client("ws://iot.eclipse.org/ws", "outsinhala123");
-		//document.write("connecting to "+ host);
-		var options = {
-			timeout: 3,
-			onSuccess: onConnect,
-		};
+    mqtt = new Paho.MQTT.Client("ws://iot.eclipse.org/ws", "clientId" + new Date().getTime());
+    //mqtt = new Paho.MQTT.Client("iot.eclipse.org", Number(1883),  "myClientId" + new Date().getTime());
+    /*mqttConnectOptions = new MqttConnectOptions();
+    mqttConnectOptions.setAutomaticReconnect(true);
 
+    mqtt.connect(mqttConnectOptions, null, mqttActionListener());*/
+		//document.write("connecting to "+ host);
+    var options = {
+          timeout: 3,
+  		onSuccess: onConnect,
+  		onFailure: onFailure,
+
+       };
+    mqtt.onConnectionLost = onConnectionLost;
+    //mqtt.onMessageArrived = onMessageArrived;
+    mqtt.onConnected = onConnected;
 		mqtt.connect(options); //connect
+    return false;
 		}
 
 	  </script>
-   </head>
+     </head>
+
      <body>
 
 
@@ -112,54 +191,56 @@
        <div class="title">Real Time Gyro Values
         </div>
          <div class="xGyro-panel">
-             <div class="initial-data" id="name-1">Yaw </div>
-                <div class="initial-data-value" id="xID">Initialising ...
+             <div class="initial-data" id="name-1">Yaw</div>
+                <div class="initial-data-value" id="xID">Initialising..
                 </div>
           </div>
 
           <div class="yGyro-panel">
-              <div class="initial-data" id="name-1">Roll
+              <div class="initial-data" id="name-1">Pitch
               </div>
-                 <div class="initial-data-value" id="yID">Initialising ...
+                 <div class="initial-data-value" id="yID">Initialising..
                  </div>
            </div>
 
            <div class="zGyro-panel">
-               <div class="initial-data" id="name-1">Pitch
+               <div class="initial-data" id="name-1">Roll
                </div>
-                  <div class="initial-data-value" id="zID">Initialising ...
+                  <div class="initial-data-value" id="zID">Initialising..
                   </div>
             </div>
+
             <!--
                   Acellometer Values
             -->
             <div class="xAccel-panel">
-                <div class="initial-data" id="name-1">Ax
+                <div class="initial-data" id="name-1">AccX
                 </div>
-                   <div class="initial-data-value" id="axID">Initialising ...
+                   <div class="initial-data-value" id="axID">Initialising..
                    </div>
             </div>
 
              <div class="yAccel-panel">
-                 <div class="initial-data" id="name-1">Ay
+                 <div class="initial-data" id="name-1">AccY
                  </div>
-                    <div class="initial-data-value" id="ayID">Initialising ...
+                    <div class="initial-data-value" id="ayID">Initialising..
                     </div>
             </div>
 
             <div class="zAccel-panel">
-                <div class="initial-data" id="name-1">Az
+                <div class="initial-data" id="name-1">AccZ
                 </div>
-                   <div class="initial-data-value" id="azID">Initialising ...
+                   <div class="initial-data-value" id="azID">Initialising..
                    </div>
             </div>
+
     </div>
 
   <div class="wrapper2 clearfix">
   <div class="vib-box">Vibration Status
   <div class="vibStat" id="vibID">Initialising ...</div>
-  </div>
-  </div>
+</div>
+</div>
 
 <div class="wrapper3 clearfix">
 
@@ -168,14 +249,41 @@
 </div>
 
 </div>
+<!-- graph2 fail
+<div class="wrapper7 clearfix">
 
+<div id="chartContainer2" >
+
+</div>
+
+</div>
+-->
+  <div class="wrapper4 clearfix">
+      <div class="threshold-limit-main">Threshold Limit
+      <div class="threshold-limit" id="tLimitID">Initialising ...</div>
+  </div>
+  </div>
+
+  <div class="wrapper5 clearfix">
+      <div class="offset-limit-main">Offset Callibration Status
+      <div class="offset-limit" id="oLimitID">Initialising ...</div>
+  </div>
+  </div>
+
+  <div class="wrapper6 clearfix">
+    <div class="set-threshold-limit" id="stLimitID">Set Threshold Limit :</div>
+
+    <div class="set-threshold-limit-input" id="stLimitInputID"><input type="text" id="tData" name="LastName" value="0.5"><br></div>
+
+  </div>
 
 
  	<script>
+
 	MQTTconnect();
 	</script>
 
-  <script src="final.js"></script>
+  <script src="finalGyro.js"></script>
   <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
    </body>
 </html>
