--- a/Related to Sensing data with both gyro and accelo/Webpage/ LiveGyro2.html
+++ b/Related to Sensing data with both gyro and accelo/Webpage/ LiveGyro2.html
@@ -15,7 +15,7 @@
 
     var mqtt;
     var connected_flag=0;
-		var reconnectTimeout = 2000;
+		var reconnectTimeout = 3;
     var host="iot.eclipse.org";
     var port=1883;
 
@@ -43,7 +43,7 @@
 	  // Once a connection has been made, make a subscription and send a message.
 
 		console.log("Connected ");
-		mqtt.subscribe("outsinhala12345");
+		mqtt.subscribe("outsinhal345");
 
       mqtt.onMessageArrived = function (message) {
       var msg=message.payloadString
@@ -161,8 +161,8 @@
 
 	  function MQTTconnect() {
 		console.log("connecting to "+ host +" "+ port);
-    mqtt = new Paho.MQTT.Client("ws://iot.eclipse.org/ws", "clientId" + new Date().getTime());
-    //mqtt = new Paho.MQTT.Client("iot.eclipse.org", Number(1883),  "myClientId" + new Date().getTime());
+    //mqtt = new Paho.MQTT.Client("ws://iot.eclipse.org/ws", "clientId" + new Date().getTime());
+    mqtt = new Paho.MQTT.Client("iot.eclipse.org", Number(1883),  "myClientId" + new Date().getTime());
     /*mqttConnectOptions = new MqttConnectOptions();
     mqttConnectOptions.setAutomaticReconnect(true);
 
