--- a/Related to Sensing data with both gyro and accelo/Webpage/NewWebpage.html
+++ b/Related to Sensing data with both gyro and accelo/Webpage/NewWebpage.html
@@ -10,7 +10,7 @@
 
    //var threshoLimit = prompt('Enter a threshold value : ');
    var thresholdLimit = 0.5;
-   var thresholdLimitB = 1000;
+   var thresholdLimitB = 500;
 
    //document.querySelector('#tLimitID').textContent = thresholdLimit;
    //console.log(typeof(threshoLimit));
@@ -53,17 +53,17 @@
 
       mqtt.onMessageArrived = function (message) {
       totCounter++;
-      var msg=message.payloadString
+      var msg=message.payloadString;
       console.log("Live Feed: " + totCounter + " " + msg);
-
       //console.log("tdata is : "+document.getElementById("tData").value);
 
       if(msg=="hello from ESP8266"){
         //continue; do nothing
         calStatus = false;
+              console.log('This line???');
       }
       else{
-            thresholdLimit = document.getElementById("tData").value;
+            thresholdLimit = document.getElementById("tDataA").value;
             thresholdLimitB = document.getElementById("tDataB").value;
             var tempData=message.payloadString.split(',');
             var xGyro=parseFloat(tempData[0].split(':')[1]);
@@ -148,12 +148,12 @@
             // Read Only, set if message might be a duplicate sent from broker
             //console.log("Duplicate: " + message.duplicate);
             //console.log(message);*/
-            }
+          }
       }
 	  }
 
-      function onConnectionLost(){
-      console.log("connection lost");
+      function onConnectionLost(message){
+      console.log("connection lost "+message.errorMessage);
       //document.getElementById("status").innerHTML = "Connection Lost";
       //document.getElementById("status_messages").innerHTML ="Connection Lost";
       connected_flag=0;
@@ -174,7 +174,7 @@
 
 	  function MQTTconnect() {
 		console.log("connecting to "+ host +" "+ port);
-    mqtt = new Paho.MQTT.Client("ws://iot.eclipse.org/ws", "clientId" + new Date().getTime());
+    mqtt = new Paho.MQTT.Client("iot.eclipse.org", Number(80), "/ws", "clientId");
     //mqtt = new Paho.MQTT.Client("iot.eclipse.org", Number(1883),  "myClientId" + new Date().getTime());
     /*mqttConnectOptions = new MqttConnectOptions();
     mqttConnectOptions.setAutomaticReconnect(true);
