--- a/Related to Sensing data with both gyro and accelo/Webpage/WithBleDevicesTry2.html
+++ b/Related to Sensing data with both gyro and accelo/Webpage/WithBleDevicesTry2.html
@@ -11,10 +11,13 @@
    //var threshoLimit = prompt('Enter a threshold value : ');
    var thresholdLimit = 0.5;
    var thresholdLimitB = 500;
-
+   var startTime = Math.floor(Date.now() / 1000);
+   var currTime = Math.floor(Date.now() / 1000);
    //document.querySelector('#tLimitID').textContent = thresholdLimit;
    //console.log(typeof(threshoLimit));
 
+   var topics = "outsinhala12345";
+   var topicFlag=-1;
    var mqtt,mqtt1;
    var connected_flag=0;
    var reconnectTimeout = 2000;
@@ -49,133 +52,154 @@
 	 	function onConnect() {
 	  // Once a connection has been made, make a subscription and send a message.
 		console.log("Connected ");
-		mqtt.subscribe("outsinhala12345");
 
+    mqtt.subscribe(topics);
+    console.log();
+      mqtt.onMessageArrived = function (message){
+          var msg=message.payloadString;
+          //console.log(message.payloadString);
+          if(msg.includes(':')){
+            //topicFlag=1;
+            //topics="gadhala12345";
+            totCounter++;
+            //var msg=message.payloadString;
+            //console.log(topics);
+            console.log("Time Elapsed : "+(currTime-startTime).toString()+"s Live Feed: " + totCounter + " " + msg);
+            //console.log("tdata is : "+document.getElementById("tData").value);
 
-      mqtt.onMessageArrived = function (message) {
-      totCounter++;
-      var msg=message.payloadString;
-      //console.log("Live Feed: " + totCounter + " " + msg);
-      //console.log("tdata is : "+document.getElementById("tData").value);
-
-      if(msg=="hi sinhalaaa"){
-        //continue; do nothing
-        calStatus = false;
-        //console.log('This line???');
-        initialCounter=0;
-      }
-      else{
-            thresholdLimit = document.getElementById("tDataA").value;
-            thresholdLimitB = document.getElementById("tDataB").value;
-            var tempData=message.payloadString.split(',');
-            var xGyro=parseFloat(tempData[0].split(':')[1]);
-            var yGyro=parseFloat(tempData[1].split(':')[1]);
-            var zGyro=parseFloat(tempData[2].split(':')[1]);
-            document.querySelector('#xID').textContent = xGyro - offX;
-            document.querySelector('#yID').textContent = yGyro - offY;
-            document.querySelector('#zID').textContent = zGyro - offZ;
-
-            //accelo part
-            var xAccel=parseFloat(tempData[3].split(':')[1]);
-            var yAccel=parseFloat(tempData[4].split(':')[1]);
-            var zAccel=parseFloat(tempData[5].split(':')[1]);
-            document.querySelector('#axID').textContent = xAccel;
-            document.querySelector('#ayID').textContent = yAccel;
-            document.querySelector('#azID').textContent = zAccel;
-
-            //document.querySelector('#tLimitID').textContent = thresholdLimit+" units";
-
-            initialCounter++;
-            if(initialCounter<=100){
-              initialListX.push(xGyro);
-              initialListY.push(yGyro);
-              initialListZ.push(zGyro);
-              //console.log(initialListX);
-
-              prevaX = xAccel;
-              prevaY = yAccel;
-              prevaZ = zAccel;
-
-            }
-            else if(InitialStatus==false){
-              calStatus = true;
-              InitialStatus = true;
-              prevX = xGyro;
-              prevY = yGyro;
-              prevZ = zGyro;
-
-              prevaX = xAccel;
-              prevaY = yAccel;
-              prevaZ = zAccel;
-              //offX=sum(initialListX)/100;
-              //offY=sum(initialListY)/100;
-              //offZ=sum(initialListZ)/100;
-
-              offX = initialListX.reduce((a, b) => a + b, 0)/100;
-              offY = initialListY.reduce((a, b) => a + b, 0)/100;
-              offZ = initialListZ.reduce((a, b) => a + b, 0)/100;
+            if(msg=="hi sinhalaaa"){
+              //continue; do nothing
+              calStatus = false;
+              //console.log('This line???');
+              initialCounter=0;
             }
             else{
-              if(Math.abs(prevX-xGyro)>=thresholdLimit||Math.abs(prevY-yGyro)>=thresholdLimit||Math.abs(prevZ-zGyro)>=thresholdLimit){
-                document.querySelector('#vibID').textContent = "Activity Started !!!";
+                  thresholdLimit = document.getElementById("tDataA").value;
+                  thresholdLimitB = document.getElementById("tDataB").value;
+                  var tempData=message.payloadString.split(',');
+                  var xGyro=parseFloat(tempData[0].split(':')[1]);
+                  var yGyro=parseFloat(tempData[1].split(':')[1]);
+                  var zGyro=parseFloat(tempData[2].split(':')[1]);
+                  document.querySelector('#xID').textContent = xGyro - offX;
+                  document.querySelector('#yID').textContent = yGyro - offY;
+                  document.querySelector('#zID').textContent = zGyro - offZ;
+
+                  //accelo part
+                  var xAccel=parseFloat(tempData[3].split(':')[1]);
+                  var yAccel=parseFloat(tempData[4].split(':')[1]);
+                  var zAccel=parseFloat(tempData[5].split(':')[1]);
+                  document.querySelector('#axID').textContent = xAccel;
+                  document.querySelector('#ayID').textContent = yAccel;
+                  document.querySelector('#azID').textContent = zAccel;
+
+                  //document.querySelector('#tLimitID').textContent = thresholdLimit+" units";
+
+                  initialCounter++;
+                  if(initialCounter<=100){
+                    initialListX.push(xGyro);
+                    initialListY.push(yGyro);
+                    initialListZ.push(zGyro);
+                    //console.log(initialListX);
+
+                    prevaX = xAccel;
+                    prevaY = yAccel;
+                    prevaZ = zAccel;
+
+                  }
+                  else if(InitialStatus==false){
+                    calStatus = true;
+                    InitialStatus = true;
+                    prevX = xGyro;
+                    prevY = yGyro;
+                    prevZ = zGyro;
+
+                    prevaX = xAccel;
+                    prevaY = yAccel;
+                    prevaZ = zAccel;
+                    //offX=sum(initialListX)/100;
+                    //offY=sum(initialListY)/100;
+                    //offZ=sum(initialListZ)/100;
+
+                    offX = initialListX.reduce((a, b) => a + b, 0)/100;
+                    offY = initialListY.reduce((a, b) => a + b, 0)/100;
+                    offZ = initialListZ.reduce((a, b) => a + b, 0)/100;
+                  }
+                  else{
+                    if(Math.abs(prevX-xGyro)>=thresholdLimit||Math.abs(prevY-yGyro)>=thresholdLimit||Math.abs(prevZ-zGyro)>=thresholdLimit){
+                      document.querySelector('#vibID').textContent = "Activity Started !!!";
+                    }
+                    else{
+                      document.querySelector('#vibID').textContent = "Activity Stopped !!!";
+                    }
+
+                    var acceloStat = "";
+                    if(Math.abs(prevaX-xAccel)>=thresholdLimitB){
+                      //document.querySelector('#vibIDB').textContent = "Displacement in X/Y/Z !!!";
+                      acceloStat += "X-Yes ";
+                    }
+                    else{
+                      //document.querySelector('#vibIDB').textContent = "No  Displacement !!!";
+                      acceloStat += "X-No ";
+                    }
+                    if(Math.abs(prevaY-yAccel)>=thresholdLimitB){
+                      //document.querySelector('#vibIDB').textContent = "Displacement in X/Y/Z !!!";
+                      acceloStat += "Y-Yes ";
+                    }
+                    else{
+                      //document.querySelector('#vibIDB').textContent = "No  Displacement !!!";
+                      acceloStat += "Y-No ";
+                    }
+                    if(Math.abs(prevaZ-zAccel)>=thresholdLimitB){
+                      //document.querySelector('#vibIDB').textContent = "Displacement in X/Y/Z !!!";
+                      acceloStat += "Z-Yes ";
+                    }
+                    else{
+                      //document.querySelector('#vibIDB').textContent = "No  Displacement !!!";
+                      acceloStat += "Z-No ";
+                    }
+                    document.querySelector('#vibIDB').textContent = acceloStat;
+                    prevX = xGyro;
+                    prevY = yGyro;
+                    prevZ = zGyro;
+
+                    prevaX = xAccel;
+                    prevaY = yAccel;
+                    prevaZ = zAccel;
+                    calStatus === true;
+                  }
+
+                  if(calStatus === true){
+                    document.querySelector('#oLimitID').textContent = "Callibrated !!!";
+                  }
+                  else{
+                    document.querySelector('#oLimitID').textContent = (100-initialCounter) + " records !!!!";
+                  }
+                  /*console.log("Topic:     " + message.destinationName);
+                  //console.log("QoS:       " + message.qos);
+                  //console.log("Retained:  " + message.retained);
+                  // Read Only, set if message might be a duplicate sent from broker
+                  //console.log("Duplicate: " + message.duplicate);
+                  //console.log(message);*/
+                }  //take out this multi line comment da!!!!!
+              }
+                else{
+                  //topicFlag=-1;
+                    //topics = "outsinhala12345";
+                    var msg=message.payloadString;
+                    console.log("Time Elapsed : "+(currTime-startTime).toString()+"s RSSI: " + msg);
+                    //console.log(topics);
+                }
+              if(topicFlag==-1){
+                topics="gadhala12345";
+                topicFlag=1;
               }
               else{
-                document.querySelector('#vibID').textContent = "Activity Stopped !!!";
+                  topics="outsinhala12345";
+                  topicFlag=-1;
               }
-
-              var acceloStat = "";
-              if(Math.abs(prevaX-xAccel)>=thresholdLimitB){
-                //document.querySelector('#vibIDB').textContent = "Displacement in X/Y/Z !!!";
-                acceloStat += "X-Yes ";
-              }
-              else{
-                //document.querySelector('#vibIDB').textContent = "No  Displacement !!!";
-                acceloStat += "X-No ";
-              }
-              if(Math.abs(prevaY-yAccel)>=thresholdLimitB){
-                //document.querySelector('#vibIDB').textContent = "Displacement in X/Y/Z !!!";
-                acceloStat += "Y-Yes ";
-              }
-              else{
-                //document.querySelector('#vibIDB').textContent = "No  Displacement !!!";
-                acceloStat += "Y-No ";
-              }
-              if(Math.abs(prevaZ-zAccel)>=thresholdLimitB){
-                //document.querySelector('#vibIDB').textContent = "Displacement in X/Y/Z !!!";
-                acceloStat += "Z-Yes ";
-              }
-              else{
-                //document.querySelector('#vibIDB').textContent = "No  Displacement !!!";
-                acceloStat += "Z-No ";
-              }
-              document.querySelector('#vibIDB').textContent = acceloStat;
-              prevX = xGyro;
-              prevY = yGyro;
-              prevZ = zGyro;
-
-              prevaX = xAccel;
-              prevaY = yAccel;
-              prevaZ = zAccel;
-              calStatus === true;
-            }
-
-            if(calStatus === true){
-              document.querySelector('#oLimitID').textContent = "Callibrated !!!";
-            }
-            else{
-              document.querySelector('#oLimitID').textContent = (100-initialCounter) + " records !!!!";
-            }
-            /*console.log("Topic:     " + message.destinationName);
-            //console.log("QoS:       " + message.qos);
-            //console.log("Retained:  " + message.retained);
-            // Read Only, set if message might be a duplicate sent from broker
-            //console.log("Duplicate: " + message.duplicate);
-            //console.log(message);*/
-          }
-      }
-
-      /*mqtt1.subscribe("gadhala12345");
-      mqtt1.onMessageArrived = function (message) {
+              mqtt.subscribe(topics);
+              currTime = Math.floor(Date.now() / 1000);
+      /*mqtt.onMessageArrived = function (message) {
       //totCounter++;
       var msg=message.payloadString;
       //console.log("Live Feed: " + totCounter + " " + msg);
@@ -183,9 +207,8 @@
       console.log(msg);
     }*/
 
-
-	  }
-
+  }
+}
       function onConnectionLost(message){
       console.log("connection lost "+message.errorMessage);
       //document.getElementById("status").innerHTML = "Connection Lost";
@@ -202,14 +225,13 @@
 
         function onConnected(recon,url){
         console.log(" in onConnected " +reconn);
-        }
-
+  }
 
 
 	  function MQTTconnect() {
 		console.log("connecting to "+ host +" "+ port);
     mqtt = new Paho.MQTT.Client("iot.eclipse.org", Number(80), "/ws", "clientId");
-    mqtt1 = new Paho.MQTT.Client("iot.eclipse.org", Number(80), "/ws", "clientId");
+    //mqtt1 = new Paho.MQTT.Client("iot.eclipse.org", Number(80), "/ws", "clientId");
 
     //mqtt = new Paho.MQTT.Client("iot.eclipse.org", Number(1883),  "myClientId" + new Date().getTime());
     /*mqttConnectOptions = new MqttConnectOptions();
